3_ano/2_semestre/Compiladores/bloco3/CSV.g4
grammar CSV;

file    : hdr row+ EOF ;
hdr     : row ;
row     : field (',' field)* NL ;
field   : TEXT
        | STRING
        |
        ;

TEXT    : ~[,\n\r"]+ ;
STRING  : '"' ('""' | ~'"')* '"' ;
NL      : '\r'? '\n' ;
